Correctly pause animation when paused in starting ScriptAction.

Task-number: QTBUG-13598
Change-Id: Ibd54f4e014eff301b57451081b7f7b35d1bed740
Reviewed-on: http://codereview.qt.nokia.com/2408
Reviewed-by: Charles Yin <charles.yin@nokia.com>