src/qtquick1/util/qdeclarativeanimation.cpp
@@ -162,7 +162,7 @@ void QDeclarative1AbstractAnimationPrivate::commence()
     q->transition(actions, properties, QDeclarative1AbstractAnimation::Forward);
 
     q->qtAnimation()->start();
-    if (q->qtAnimation()->state() != QAbstractAnimation::Running) {
+    if (q->qtAnimation()->state() == QAbstractAnimation::Stopped) {
         running = false;
         emit q->completed();
     }
