tests/auto/qtquick1/qdeclarativeanimations/data/pauseBug.qml
@@ -1,0 +1,7 @@
+import QtQuick 1.1
+
+SequentialAnimation {
+    id: animation
+    running: true
+    ScriptAction { script: animation.paused = true }
+}
